[VEUE-530]: Fix broadcaster chat message alignment

--- a/app/javascript/style/chat.scss
+++ b/app/javascript/style/chat.scss
@@ -135,7 +135,7 @@
       .write-area {
         padding: 0.5rem 1rem;
         background: color.$neutral-background;
-        min-height: 27px;
+        line-height: 27px;
         border-radius: 10px;
         outline: none;
         flex-grow: 1;
